src/objects/MMGLOBALASSET__c.object
<CustomObject>
    <description>(MBI) - MMD - Plan Sponsor - Pension Plan Tax-Exempt Assets</description>
    <fields>
        <fullName>APERCENT__c</fullName>
        <label>Percent</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>COLLECTIVE__c</fullName>
        <label>Collective Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collective_Desc__c</fullName>
        <formula>IF( COLLECTIVE__c =&quot;000&quot;,&quot;Unspecified&quot;,
IF( COLLECTIVE__c =&quot;001&quot;,&quot;Common Collective Trust&quot;,
IF( COLLECTIVE__c =&quot;002&quot;,&quot;Exchange-Traded Fund&quot;,
IF( COLLECTIVE__c =&quot;004&quot;,&quot;Mutual Fund&quot;,
IF( COLLECTIVE__c =&quot;005&quot;,&quot;Pooled Separate Account&quot;,
IF( COLLECTIVE__c =&quot;007&quot;,&quot;Unit Trust&quot;,&quot;&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOLLARS__c</fullName>
        <label>Dollars ($000)</label>
        <precision>14</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Firm_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm Link</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Asset Classes - MMD</relationshipLabel>
        <relationshipName>MMD_Plan_Tax_Exempt_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <formula>$Organization.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Firm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>MMD ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC__c</fullName>
        <label>Amount (Local Curr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_Currency_Conversion_Code__c</fullName>
        <formula>MMD_Pension_Plan__r.CURR_CODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Currency Conversion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMD_Pension_Plan__c</fullName>
        <label>MMD Pension Plan</label>
        <referenceTo>MMPLANS__c</referenceTo>
        <relationshipLabel>Plan Tax-Exempt Assets</relationshipLabel>
        <relationshipName>MMD_Plan_Asset</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OTHERA__c</fullName>
        <label>Other Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <formula>MMD_Pension_Plan__r.PLAN_NAME__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>MMD_Pension_Plan__r.Plan_Type_Desc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGION__c</fullName>
        <label>Region Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Desc__c</fullName>
        <label>Region Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEQ_NO__c</fullName>
        <label>Plan Sequence #</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STYLE__c</fullName>
        <label>Style Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Style_Desc__c</fullName>
        <label>Style Desc</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE__c</fullName>
        <label>Type Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_Desc__c</fullName>
        <formula>IF( TYPE__c =&quot;001&quot;,&quot;Alternatives&quot;,
IF( TYPE__c =&quot;002&quot;,&quot;Asset Allocation&quot;,
IF( TYPE__c =&quot;003&quot;,&quot;Bonds&quot;,
IF( TYPE__c =&quot;004&quot;,&quot;Cash &amp; Short-Term&quot;,
IF( TYPE__c =&quot;005&quot;,&quot;Equities&quot;,
IF( TYPE__c =&quot;006&quot;,&quot;Fixed Income&quot;,
IF( TYPE__c =&quot;007&quot;,&quot;Gilts&quot;,
IF( TYPE__c =&quot;010&quot;,&quot;Lifestyle Fund&quot;,
IF( TYPE__c =&quot;008&quot;,&quot;Loans&quot;,
IF( TYPE__c =&quot;009&quot;,&quot;Self Directed Brokerage Accounts&quot;,
IF( TYPE__c =&quot;011&quot;,&quot;Target Date Retirement Fund&quot;,
IF( TYPE__c =&quot;000&quot;,&quot;Unspecified&quot;,&quot;&quot;))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>MMD Plan Tax-Exempt Asset</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Link</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MMD Plan Tax-Exempt Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>